crates/ralph-tui/tests/snapshots/integration_snapshots__footer_iter2.snap
---
source: crates/ralph-tui/tests/integration_snapshots.rs
expression: harness.render_footer()
---
──────────────────────────────────────────────────────────────────────────────── Total Time Elapsed: 00:00 │ e export E all                            ◉ ACTIVE
