crates/ralph-tui/tests/snapshots/integration_snapshots__full_layout_80col.snap
---
source: crates/ralph-tui/tests/integration_snapshots.rs
expression: harness.render_full()
---
[iter 1/1] [TIME] | 📋 Planner | [LIVE] | ? help
────────────────────────────────────────────────────────────────────────────────
Content line 1
Content line 2
Content line 3
Content line 4
Content line 5

────────────────────────────────────────────────────────────────────────────────
 Total Time Elapsed: [TIME] │ e export E all                            ◉ ACTIVE
